@@ -53,6 +53,7 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_BACKGROUND_REGION_COLOR,
   GST_TTML_ATTR_TEXT_ALIGN,
   GST_TTML_ATTR_DISPLAY_ALIGN,
+  GST_TTML_ATTR_OVERFLOW,
   GST_TTML_ATTR_UNKNOWN
 } GstTTMLAttributeType;
 
